--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,7 @@ html {
   align-items: center;
   margin: auto;
   color: #fff;
-  font-family: "Fira Sans Condensed", sans-serif;
+  font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   background-color: #1b1919;
 }
@@ -326,5 +326,5 @@ input[type="checkbox"]:checked + .search-form__pseudo-checkbox::after {
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-  background-color: #d9d9d9;
+  background-color: #D9D9D9;
 }
