--- a/styles/style.css
+++ b/styles/style.css
@@ -83,7 +83,7 @@ ol {
   font-size: 18px;
   font-weight: 400;
   line-height: 1;
-  padding-bottom: 5px;
+  padding-bottom: 4px;
 }
 
 .search-form__label {
@@ -109,12 +109,16 @@ ol {
   font-size: 18px;
   font-weight: 400;
   line-height: 1;
-  color: rgba(255, 255, 255, 0.7);
+  color: #fff;
   background-color: transparent;
   border: none;
   border-top: 1px solid #ffffff;
-  border-bottom: 1px solid #ffffff;
+  border-bottom: 1px solid currentColor;
   appearance: none;
+}
+
+.search-form__textfield::placeholder {
+  color: rgba(255, 255, 255, 0.7);
 }
 
 .search-form__textfield:hover {
@@ -141,6 +145,9 @@ ol {
 }
 
 .search-form__pseudo-checkbox {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
   width: 19px;
   height: 19px;
   border: 1px solid #ffffff;
@@ -149,17 +156,17 @@ ol {
 
 .search-form__pseudo-checkbox::after {
   content: "";
-  min-width: 17px;
-  min-height: 17px;
+  min-width: 15px;
+  min-height: 15px;
   background-color: #fff;
-  align-content: center;
+  display: none;  
 }
 
 input[type="checkbox"]:checked + .search-form__pseudo-checkbox::after {
   display: inline-block;
 }
 
-.search-form__label-text:hover {
+.search-form__label:hover .search-form__label-text {
   text-decoration: underline;
 }
 
@@ -181,24 +188,25 @@ input[type="checkbox"]:checked + .search-form__pseudo-checkbox::after {
   line-height: 1;
   color: #ffffff;
   background-color: transparent;
-  border: 1px solid #ffffff;
+  border: 1px solid currentColor;
   cursor: pointer;
 }
 
 .search-form__submit-button {
   min-width: 194px;
-  padding-top: 4px;
+  padding-top: 8px;
 }
 
-.search-form__submit-button:hover {
+.button:hover {
   text-decoration: underline;
 }
 
-.search-form__submit-button:active {
+.button:active {
   background-color: #545050;
+  text-decoration: none;
 }
 
-.search-form__submit-button:focus-visible {
+.button:focus-visible {
   outline: 1px solid #ffffff;
   outline-offset: 2px;
 }
@@ -206,7 +214,6 @@ input[type="checkbox"]:checked + .search-form__pseudo-checkbox::after {
 .content__details {
   grid-area: content;
   width: 100%;
-  max-height: 534px;
 }
 
 .title {
@@ -215,8 +222,7 @@ input[type="checkbox"]:checked + .search-form__pseudo-checkbox::after {
   font-weight: 700;
   text-transform: uppercase;
   line-height: 0.94;
-  margin-top: 5px;
-  margin-bottom: 26px;
+  margin-bottom: 18px;
 }
 
 .content__accent {
@@ -224,7 +230,7 @@ input[type="checkbox"]:checked + .search-form__pseudo-checkbox::after {
 }
 
 .content__list-container {
-  max-height: 298px;
+  height: 298px;
   overflow: auto;
   position: relative;
 }
@@ -242,8 +248,15 @@ input[type="checkbox"]:checked + .search-form__pseudo-checkbox::after {
 }
 
 .content__card-link {
+  display: block;
   text-decoration: none;
   color: #ffffff;
+}
+
+.content__card-link:active {
+  background-color: #545050;
+  color: #ffffff;
+  text-decoration: none;
 }
 
 .content__video-card {
@@ -267,14 +280,14 @@ input[type="checkbox"]:checked + .search-form__pseudo-checkbox::after {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  padding-bottom: 2px;
+  padding-bottom: 6px;
 }
 
 .content__video-card-description {
   font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   font-weight: 400;
-  color: rgba(255, 255, 255, 0.7);
+  color: #ffffff;
   line-height: 16.2px;
   display: -webkit-box;
   -webkit-line-clamp: 4;
@@ -285,12 +298,6 @@ input[type="checkbox"]:checked + .search-form__pseudo-checkbox::after {
 
 .content__video-card-description-container:hover {
   text-decoration: underline;
-}
-
-.content__video-card:active {
-  background-color: #545050;
-  color: #ffffff;
-  text-decoration: none;
 }
 
 .content__video-card-description-container:focus-visible {
@@ -312,8 +319,7 @@ input[type="checkbox"]:checked + .search-form__pseudo-checkbox::after {
 
 .more-button {
   width: calc(100% - 4px);
-  margin: 24px 3px 10px 1px;
-  padding-top: 6px;
+  margin: 28px 3px 0px 1px;
 }
 
 /* Кастомный скроллбар */
